Fix Safari adress bar problem on iOS

--- a/public/global.css
+++ b/public/global.css
@@ -5,12 +5,13 @@
 }
 
 html {
-	height: 100%;
+	min-height: -webkit-fill-availbale;
 }
 
 body {
 	color: #333;
 	background-color: #333;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-	height: 100%;
+	min-height: 100vh;
+	min-height: -webkit-fill-availbale;
 }
